# research-assistant-demo

./: .env.example  .gitignore  README.md  pyproject.toml
src/agent_generic/: agent.py  state.py
src/agent_librarian/: README.md  app.py  instructions.py
src/agent_librarian_assistant/: README.md  app.py  instructions.py
src/agent_rag/: README.md  README_GRADIO.md  app.py  gradio_app.py  instructions.py
src/research_assistant/: __init__.py  main.py
src/tools/: abstract.py  base.py  books_db_save.py  books_db_search.py  mathpix.py  pdf_paths.py  sqlite.py  web_search.py
src/utils/mathpix_conversion/: README.md  mathpix_pdf_converter.py
src/utils/read_folder/: README.md  sources_reader.py
src/utils/sqlite_db/: books_storage.py
